# eptlib

./: .gitignore  CMakeLists.txt  LICENSE  README.md
app/: CMakeLists.txt  ept_convreact_main.cc  ept_convreact_main.h.in  ept_gradient_main.cc  ept_gradient_main.h.in  ept_helmholtz_main.cc  ept_helmholtz_main.h.in  eptlib_main.cc  eptlib_main.h.in
cmake/: EPTlibConfig.cmake.in  VerboseFindPackage.cmake
docs/: header.html  style.css
img/: EPTlib.xcf
include/eptlib/: config.h  differential_operator.h  ept_convreact.h  ept_gradient.h  ept_helmholtz.h  ept_helmholtz_chi2.h  ept_interface.h  ept_methods.h  finite_difference.h  image.h  io_hdf5.h  median_filter.h  shape.h  util.h  version.h.in
include/eptlib/filter/: anatomical_savitzky_golay.h  moving_window.h  postprocessing.h  savitzky_golay.h  weight_functions.h
include/eptlib/io/: io_hdf5.h  io_toml.h  io_util.h
include/eptlib/linalg/: linalg_householder.h  linalg_qr.h  linalg_util.h  matrix.h  qr.h  regression.h  vector.h
include/eptlib/polynomial/: fitting.h
share/examples/: example.toml
src/: CMakeLists.txt  ept_convreact.cc  ept_gradient.cc  ept_helmholtz.cc  ept_helmholtz_chi2.cc  ept_interface.cc  ept_methods.cc  finite_difference.cc  image.cc  io_hdf5.cc  median_filter.cc  shape.cc  util.cc  version.cc
src/filter/: anatomical_savitzky_golay.cc  moving_window.cc  postprocessing.cc  savitzky_golay.cc  weight_functions.cc
src/io/: io_hdf5.cc  io_toml.cc  io_util.cc
src/linalg/: linalg_householder.cc  linalg_qr.cc  linalg_util.cc  qr.cc  regression.cc
src/polynomial/: fitting.cc
test/: CMakeLists.txt  main.cc  test_ept_convreact.cc  test_ept_helmholtz.cc  test_ept_interface.cc  test_filter_anatomical_savitzky_golay.cc  test_filter_moving_window.cc  test_filter_savitzky_golay.cc  test_finite_difference.cc  test_image.cc  test_io_hdf5.cc  test_io_toml.cc  test_io_util.cc  test_linalg_householder.cc  test_linalg_matrix.cc  test_linalg_qr.cc  test_linalg_util.cc  test_linalg_vector.cc  test_median_filter.cc  test_polynomial_fitting.cc  test_shape.cc  test_util.cc
test/input/: test_input.h5  test_input.toml
